gatewayVirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: welcome-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "welcomevirtualservice"
spec:
  hosts:
  - "*"
  gateways:
  - welcome-gateway
  http:
  - match:
    - uri:
        exact: /welcome
    route:
    - destination:
        host: "welcomeservice"
        port:
          number: 8081
